UCF-APR2.4/ftr main/force-app/main/default/objects/SurveyInvitation/fields/Checked_For_Bad_Responses__c.field-meta.xml
<CustomField>
    <fullName>Checked_For_Bad_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether this Survey Invitation was checked for Bad Responses. If false, it will be picked up by the schedule trigger flow and do action accordingly.</description>
    <label>Checked For Bad Responses</label>
    <type>Checkbox</type>
</CustomField>