UCF-APR2.4/ftr main/force-app/main/default/objects/SurveyInvitation/fields/Resend_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Resend_Invitation__c</fullName>
    <label>Resend Invitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>