UCF-APR2.4/ftr main/force-app/main/default/objects/SurveyInvitation/fields/Response_Category__c.field-meta.xml
<CustomField>
    <fullName>Response_Category__c</fullName>
    <label>Response Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>